# MLOFINAL

./: README.md  pyproject.toml
data/derived/: titanic_merged_preprocessed.csv
data/raw/: titanic_test.csv  titanic_train.csv
src/: main.py  preprocessing.py  train.py
