[project]
name = "mlofinal"
version = "0.1.0"
description = "ML Ops final project: end-to-end Titanic survival prediction pipeline with data download, preprocessing, baseline model training, and a CLI entrypoint."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
